--- a/styles.css
+++ b/styles.css
@@ -949,7 +949,7 @@ display: block;
   .glassmorphism-container2 {
  
     font-family: 'Lexend', sans-serif;
-    margin: 10px;
+    margin-left: 200px;
     display: flex;
     align-items: center;
     justify-content: center;
@@ -958,7 +958,7 @@ display: block;
     .glassmorphism-container3 p{
  
       font-family: 'Lexend', sans-serif;
-      margin: 1px;
+      margin: 20px;
       display: flex;
       align-items: center;
       justify-content: center;
@@ -967,7 +967,7 @@ display: block;
       .glassmorphism-container4 p{
  
         font-family: 'Lexend', sans-serif;
-        margin: 1px;
+        margin-right: 30px;
         display: flex;
         align-items: center;
         justify-content: center;
