--- a/styles.css
+++ b/styles.css
@@ -221,7 +221,6 @@ animation: gradientAnimation 5s linear infinite;
 margin-top: 20px;
 }
 .buttons-container {
-  display: flex;
   justify-content: center;
   align-items: center;
   margin-top: 20px;
@@ -230,17 +229,18 @@ margin-top: 20px;
 
 .button {
   display: inline-block;
-  padding: 10px 20px;
-  margin: 0 10px;
+  padding: 10px 10px;  
+  margin: 50px 50px;
   background-color: #ffbb00;
   color: #000;
   font-family: 'Poppins', sans-serif;
-  font-size: 14px;
+  font-size: 13px;
   text-transform: uppercase;
   letter-spacing: 1px;
   text-decoration: none;
   border-radius: 5px;
   transition: background-color 0.3s ease-in-out, color 0.3s ease-in-out;
+  width:149px;
 }
 
 .button2 {
@@ -256,6 +256,7 @@ margin-top: 20px;
   text-decoration: none;
   border-radius: 5px;
   transition: background-color 0.3s ease-in-out, color 0.3s ease-in-out;
+  width: 80px;
 }
 .button:hover {
   background-color: #eb6200;
@@ -499,12 +500,13 @@ justify-content: space-between; /* Distribute space between children */
 flex-wrap: wrap; /* Allow children to wrap if necessary */
 }
 .domain-text1 {
+  text-align: center;
   font-family: 'Lexend', sans-serif;
   font-size: 2rem;
   color: rgb(255, 255, 255);
   position: absolute;
   top: 20%;
-  left: 50%;
+  left: 52%;
   transform: translate(-50%, -50%);
   z-index: 1; /* Place the text above the image */
   }
@@ -520,6 +522,7 @@ border-radius: 10px;
 margin: 20px;
 display: flex;
 margin-left: 100px;
+margin-right:40px;
 align-items: center;
 justify-content: center;
 transition: transform 0.3s ease-in-out, box-shadow 0.3s ease-in-out, background-color 0.3s ease-in-out;
@@ -542,7 +545,7 @@ transition: transform 0.3s ease-in-out, box-shadow 0.3s ease-in-out, background-
     border-radius: 20px;
     margin: 20px;
     display: flex;
-    margin-top: 50px;
+    margin-top: 20px;
     align-items: center;
     justify-content: center;
     transition: transform 0.3s ease-in-out, box-shadow 0.3s ease-in-out, background-color 0.3s ease-in-out;
@@ -556,7 +559,8 @@ transition: transform 0.3s ease-in-out, box-shadow 0.3s ease-in-out, background-
       border-radius: 10px;
       margin: 20px;
       display: flex;
-      margin-top: 10px;
+      margin-left:40px;
+      margin-bottom: 12px;
       align-items: center;
       justify-content: center;
       transition: transform 0.3s ease-in-out, box-shadow 0.3s ease-in-out, background-color 0.3s ease-in-out;
@@ -849,7 +853,7 @@ transition: background-color 0.3s ease-in-out; /* Add transition effect */
   width: 100%;
   }
 .register-button{
-  display: block;
+  display: inline-block;
 }
 
 
@@ -941,15 +945,14 @@ display: block;
     border-radius: 5px;
     margin-bottom: 10px;
     z-index: 7;
-    
-
+    width: 119px;
     transition: background-color 0.3s ease-in-out, color 0.3s ease-in-out;
 
   }
   .glassmorphism-container2 {
  
     font-family: 'Lexend', sans-serif;
-    margin-left: 200px;
+    margin: 10px;
     display: flex;
     align-items: center;
     justify-content: center;
@@ -958,7 +961,7 @@ display: block;
     .glassmorphism-container3 p{
  
       font-family: 'Lexend', sans-serif;
-      margin: 20px;
+      margin: 1px;
       display: flex;
       align-items: center;
       justify-content: center;
@@ -967,7 +970,7 @@ display: block;
       .glassmorphism-container4 p{
  
         font-family: 'Lexend', sans-serif;
-        margin-right: 30px;
+        margin: 1px;
         display: flex;
         align-items: center;
         justify-content: center;
@@ -976,7 +979,8 @@ display: block;
   .button {
     display: inline-block;
     padding: 10px 20px;
-    margin: 0 23%;
+    margin: 0% 23%;
+    margin-left:94px;
     background-color: #ffbb00;
     color: #000;
     font-family: 'Poppins', sans-serif;
@@ -986,6 +990,7 @@ display: block;
     text-decoration: none;
     border-radius: 5px;
     transition: background-color 0.3s ease-in-out, color 0.3s ease-in-out;
+    width: 149px;
   }
   .button2 {
     display: inline-block;
@@ -1002,6 +1007,7 @@ display: block;
     text-decoration: none;
     border-radius: 5px;
     transition: background-color 0.3s ease-in-out, color 0.3s ease-in-out;
+    width: 90px;
   }
   .register-button:hover {
     background-color: #eb6200;
@@ -1144,7 +1150,7 @@ font-family: 'Lexend', sans-serif;
 font-size: 2rem;
 color: rgb(255, 255, 255);
 position: absolute;
-top: 40%;
+top: 39%;
 left: 50%;
 transform: translate(-50%, -50%);
 z-index: 1; /* Place the text above the image */
@@ -1157,7 +1163,7 @@ font-family: 'Lexend', sans-serif;
 font-size: 2rem;
 color: rgb(255, 255, 255);
 position: absolute;
-top: 6.5%;
+top: 5.5%;
 left: 50%;
 transform: translate(-50%, -50%);
 z-index: 1; /* Place the text above the image */
@@ -1167,7 +1173,7 @@ font-family: 'Lexend', sans-serif;
 font-size: 2rem;
 color: rgb(255, 255, 255);
 position: absolute;
-top: 20.5%;
+top: 19%;
 left: 50%;
 transform: translate(-50%, -50%);
 z-index: 1; /* Place the text above the image */
