--- a/styles.css
+++ b/styles.css
@@ -597,6 +597,7 @@ margin: 20px;
 .glassmorphism-image {
 max-width: 80%; /* Make sure the image fits within the container */
 max-height: 80%; /* Make sure the image fits within the container */
+margin-left: 10px;
 /* Rounded corners */
 }
 
@@ -953,6 +954,7 @@ display: block;
     font-family: 'Lexend', sans-serif;
     margin: 10px;
     display: flex;
+    margin-left:0px;
     align-items: center;
     justify-content: center;
    font-size: 20px;
@@ -1066,7 +1068,7 @@ display: block;
 .mobile-nav {
   display: block;
 }
-a query for mobile responsiveness */
+/*a query for mobile responsiveness */
 
 .about-title {
   font-size: 24px;
