--- a/styles.css
+++ b/styles.css
@@ -995,6 +995,10 @@ svg text {
     justify-content: center;
     font-size: 20px;
   }
+  .menu-button{
+    margin-right: 170px;
+    margin-top: 4px;
+  }
   .glassmorphism-container3 p {
     font-family: "Lexend", sans-serif;
     margin: 30px;
@@ -1199,8 +1203,8 @@ svg text {
     font-size: 2rem;
     color: rgb(255, 255, 255);
     position: absolute;
-    top: 39.5%;
-    left: 50%;
+    top: 38.8%;
+    left: 52.4%;
     transform: translate(-50%, -50%);
     z-index: 1; /* Place the text above the image */
   }
@@ -1220,8 +1224,8 @@ svg text {
     font-size: 2rem;
     color: rgb(255, 255, 255);
     position: absolute;
-    top: 20.4%;
-    left: 50%;
+    top:19.9%;
+    left: 52%;
     transform: translate(-50%, -50%);
     z-index: 1; /* Place the text above the image */
   }
