--- a/webpage-main/webpage-main/styles.css
+++ b/webpage-main/webpage-main/styles.css
@@ -458,12 +458,13 @@ margin: 0 50px; /* Increase or decrease this value to adjust spacing */
 
 /* Add styling for the glassmorphism container */
 .glassmorphism-container {
-width: 300px; /* Set the width of the container */
-height: 200px; /* Set the height of the container */
+width: 440px; /* Set the width of the container */
+height: 400px; /* Set the height of the container */
 background-color: rgba(255, 255, 255, 0.1); /* Transparent white background */
 backdrop-filter: blur(10px); /* Apply the glassmorphism effect */
 border-radius: 10px; /* Rounded corners */
 margin: 20px auto;
+margin-left: 650px;
 display: flex;
 align-items: center;
 justify-content: center;
@@ -524,6 +525,21 @@ align-items: center;
 justify-content: center;
 transition: transform 0.3s ease-in-out, box-shadow 0.3s ease-in-out, background-color 0.3s ease-in-out;
 }
+.glassmorphism-container21 {
+font-family: 'Staatliches', cursive;
+width: 400px;
+height: 400px;
+background-color: rgba(255, 255, 255, 0.1);
+backdrop-filter: blur(10px);
+border-radius: 10px;
+margin: 20px;
+display: flex;
+margin-left: 100px;
+align-items: center;
+justify-content: center;
+transition: transform 0.3s ease-in-out, box-shadow 0.3s ease-in-out, background-color 0.3s ease-in-out;
+}
+
 .glassmorphism-container2 p{
  
   font-family: 'Lexend', sans-serif;
@@ -608,30 +624,31 @@ transition: transform 0.3s ease-in-out, box-shadow 0.3s ease-in-out, background-
 }
 .binary-text {
 font-family: 'Lexend', sans-serif;
-font-size: 2rem;
+font-size: 4rem;
 color: rgb(255, 255, 255);
 position: absolute;
-top: 47.2%;
+top: 48%;
 left: 50%;
 transform: translate(-50%, -50%);
 z-index: 1; /* Place the text above the image */
 }
 .binary-text1 {
   font-family: 'Lexend', sans-serif;
-  font-size: 2rem;
+  font-size: 4rem;
   color: rgb(255, 255, 255);
   position: absolute;
-  top: 20%;
+  top: 19%;
   left: 50%;
   transform: translate(-50%, -50%);
   z-index: 1; /* Place the text above the image */
   }
 .quantum-text {
+  margin-left: 48px;
 font-family: 'Lexend', sans-serif;
-font-size: 2rem;
+font-size: 4rem;
 color: rgb(255, 255, 255);
 position: absolute;
-top: 9%;
+top: 5%;
 left: 50%;
 transform: translate(-50%, -50%);
 z-index: 1; /* Place the text above the image */
@@ -641,7 +658,7 @@ font-family: 'Lexend', sans-serif;
 font-size: 2rem;
 color: rgb(255, 255, 255);
 position: absolute;
-top: 31%;
+top: 29%;
 left: 50%;
 transform: translate(-50%, -50%);
 z-index: 1; /* Place the text above the image */
@@ -946,6 +963,22 @@ display: block;
     transition: background-color 0.3s ease-in-out, color 0.3s ease-in-out;
 
   }
+  .glassmorphism-container4 {
+    font-family: 'Staatliches', cursive;
+    width: 300px;
+    height: 100px;
+    background-color: rgba(255, 255, 255, 0.1);
+    backdrop-filter: blur(10px);
+    border-radius: 10px;
+    margin: 20px;
+    display: flex;
+    margin-top: 10px;
+    align-items: center;
+    justify-content: center;
+    transition: transform 0.3s ease-in-out, box-shadow 0.3s ease-in-out, background-color 0.3s ease-in-out;
+    margin-left: 40px;
+    }
+  
   .glassmorphism-container2 {
  
     font-family: 'Lexend', sans-serif;
@@ -954,6 +987,7 @@ display: block;
     align-items: center;
     justify-content: center;
    font-size: 20px;
+   margin-left: 50px;
     }
     .glassmorphism-container3 p{
  
@@ -1129,7 +1163,19 @@ margin: 20px;
 display: flex;
 align-items: center;
 justify-content: center;
-margin-left: 40px;
+margin-left: 58px;
+}
+.glassmorphism-container2 {
+width: 300px;
+height: 100px;
+background-color: rgba(255, 255, 255, 0.1);
+backdrop-filter: blur(10px);
+border-radius: 10px;
+margin: 20px;
+display: flex;
+align-items: center;
+justify-content: center;
+margin-left: 58px;
 }
 .circular-image {
 width: 100px; /* Set the width of the circular image */
@@ -1141,10 +1187,10 @@ transition: transform 0.3s ease-in-out, box-shadow 0.3s ease-in-out, background-
 }
 .binary-text {
 font-family: 'Lexend', sans-serif;
-font-size: 2rem;
+font-size: 4rem;
 color: rgb(255, 255, 255);
 position: absolute;
-top: 40%;
+top: 50%;
 left: 50%;
 transform: translate(-50%, -50%);
 z-index: 1; /* Place the text above the image */
